@@ -2,6 +2,7 @@ This file documents the revision history for the Mod-Gearman-Worker-Go
 
 next:
           - epn: improve timeout handling
+          - add internal check_nsc_web handler
 
 1.3.3    Fri Apr 28 09:55:33 CEST 2023
           - parse shell args to execute more commands without shell
